--- a/respo/gateway.properties
+++ b/respo/gateway.properties
@@ -1,1 +1,15 @@
-3437643
+server.port=8086
+management.security.enabled=false
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+ribbon.ReadTimeout=10000
+ribbon.ConnectTimeout=10000
+zuul.ignoredServices='*'
+zuul.routes.auth-service.path=/uaa/**
+zuul.routes.auth-service.stripPrefix=false
+zuul.routes.auth-service.sensitiveHeaders=
+
+zuul.routes.a-service.path=/a/**
+zuul.routes.a-service.sensitiveHeaders=
+
+zuul.routes.b-service.path=/b/**
+zuul.routes.b-service.sensitiveHeaders=
