--- a/respo/A-Service.properties
+++ b/respo/A-Service.properties
@@ -1,1 +1,6 @@
-233223
+server.port=8087
+eureka.instance.metadata-map.user.name=${security.user.name}
+eureka.instance.metadata-map.user.pasword=${security.user.pasword}
+security.user.name=admin
+security.user.password=admin
+eureka.client.serviceUrl.defaultZone=http://server1:8081/eureka
