--- a/respo/gateway.properties
+++ b/respo/gateway.properties
@@ -13,3 +13,5 @@ zuul.routes.a-service.sensitiveHeaders=
 
 zuul.routes.b-service.path=/b/**
 zuul.routes.b-service.sensitiveHeaders=
+
+eureka.client.serviceUrl.defaultZone=http://server1:8081/eureka
