--- a/respo/A-Service.properties
+++ b/respo/A-Service.properties
@@ -4,3 +4,4 @@ server.port=8087
 #security.user.name=admin
 #security.user.password=admin
 eureka.client.serviceUrl.defaultZone=http://server1:8081/eureka
+my.name=shiyipan
