--- a/respo/application.properties
+++ b/respo/application.properties
@@ -1,1 +1,12 @@
 eureka.client.serviceUrl.defaultZone=http://server1:8081/eureka
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
+ribbon.ReadTimeout=5000
+ribbon.ConnectTimeout=5000
+spring.rabbitmq.host=localhost
+spring.sleuth.sampler.percentage=1
+spring.sleuth.integration.enabled=false
+spring.sleuth.scheduled.skip-pattern="^org.*HystrixStreamTask$"
+authserver.hostname=auth-service
+authserver.port=5000
+authserver.contextPath=/uaa
+security.oauth2.resource.user-info-uri=http://${authserver.hostname}:${authserver.port}${authserver.contextPath}/current
