--- a/respo/application.properties
+++ b/respo/application.properties
@@ -6,7 +6,7 @@ spring.rabbitmq.host=localhost
 spring.sleuth.sampler.percentage=1
 spring.sleuth.integration.enabled=false
 spring.sleuth.scheduled.skip-pattern="^org.*HystrixStreamTask$"
-authserver.hostname=Auth-Service
+authserver.hostname=auth-service
 authserver.port=5000
 authserver.contextPath=/uaa
 security.oauth2.resource.user-info-uri=http://${authserver.hostname}:${authserver.port}${authserver.contextPath}/current
