--- a/respo/auth-service.properties
+++ b/respo/auth-service.properties
@@ -1,1 +1,8 @@
-434343
+server.port=5000
+server.context-path=/uaa
+management.security.enabled=false
+management.context-path=/mgmt
+eureka.instance.health-check-url-path=${server.context-path}${management.context-path}/health
+eureka.instance.status-page-url-path=${server.context-path}${management.context-path}/info
+eureka.instance.metadata-map.management.context-path=${server.context-path}${management.context-path}
+
