--- a/respo/auth-service.properties
+++ b/respo/auth-service.properties
@@ -5,4 +5,6 @@ management.context-path=/mgmt
 eureka.instance.health-check-url-path=${server.context-path}${management.context-path}/health
 eureka.instance.status-page-url-path=${server.context-path}${management.context-path}/info
 eureka.instance.metadata-map.management.context-path=${server.context-path}${management.context-path}
-
+spring.datasoruce.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/auth?useUnicode=true&characterEncoding=utf-8
+spring.jpa.show-sql=true
