--- a/respo/auth-service.properties
+++ b/respo/auth-service.properties
@@ -6,5 +6,6 @@ eureka.instance.health-check-url-path=${server.context-path}${management.context
 eureka.instance.status-page-url-path=${server.context-path}${management.context-path}/info
 eureka.instance.metadata-map.management.context-path=${server.context-path}${management.context-path}
 spring.datasoruce.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/auth?useUnicode=true&characterEncoding=utf-8
 spring.jpa.show-sql=true
