--- a/respo/auth-service.properties
+++ b/respo/auth-service.properties
@@ -8,4 +8,6 @@ eureka.instance.metadata-map.management.context-path=${server.context-path}${man
 spring.datasoruce.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/auth?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=199412
 spring.jpa.show-sql=true
