--- a/respo/A-Service.properties
+++ b/respo/A-Service.properties
@@ -4,3 +4,9 @@ eureka.instance.metadata-map.user.pasword=${security.user.pasword}
 security.user.name=admin
 security.user.password=admin
 my.name=shiyipan
+security.oauth2.client.clientId=A-Service
+security.oauth2.client.clientSecret=${security.user.pasword}
+security.oauth2.client.accessTokenUri=
+security.oauth2.client.grant-type=client_credentials
+security.oauth2.client.scope=server
+
