--- a/respo/A-Service.properties
+++ b/respo/A-Service.properties
@@ -6,7 +6,7 @@ security.user.password=admin
 my.name=shiyipan
 security.oauth2.client.clientId=A-Service
 security.oauth2.client.clientSecret=${security.user.pasword}
-security.oauth2.client.accessTokenUri=
+security.oauth2.client.accessTokenUri=http://${authserver.hostname}:${authserver.port}${authserver.contextPath}/oauth/token
 security.oauth2.client.grant-type=client_credentials
 security.oauth2.client.scope=server
 
