--- a/respo/passcloud-monitor.properties
+++ b/respo/passcloud-monitor.properties
@@ -1,15 +1,10 @@
-eureka.instance.hostname=monitor
 eureka.instance.prefer-ip-address=false
 eureka.client.serviceUrl.defaultZone=http://root:root@localhost:8761/eureka
 eureka.instance.metadata-map.user.name=${security.user.name}
 eureka.instance.metadata-map.user.pasword=${security.user.pasword}
-
-turbine.stream.port=8083
-
 security.user.name=root
 security.user.password=root
-
 spring.rabbitmq.host=localhost
 spring.boot.admin.routes.endpoint=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream
 spring.boot.admin.turbine.clusters=default
-spring.boot.admin.turbine.location=http://monitor:${turbine.stream.port}
+spring.boot.admin.turbine.location=http://localhost:8083
