--- a/respo/passcloud-monitor.properties
+++ b/respo/passcloud-monitor.properties
@@ -7,4 +7,4 @@ spring.rabbitmq.host=localhost
 spring.boot.admin.routes.endpoint=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream
 spring.boot.admin.turbine.clusters=default
 spring.boot.admin.turbine.location=http://localhost:8083
-eureka.client.serviceUrl.defaultZone=http://root:root@localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
