--- a/respo/gateway.properties
+++ b/respo/gateway.properties
@@ -3,6 +3,10 @@ management.security.enabled=false
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
 ribbon.ReadTimeout=10000
 ribbon.ConnectTimeout=10000
+ribbon.MaxAutoRetries=1
+ribbon.MaxAutoRetriesNextServer=2
+ribbon.OkToRetryOnAllOperations=false
+
 zuul.ignoredServices='*'
 zuul.routes.auth-service.path=/uaa/**
 zuul.routes.auth-service.stripPrefix=false
