--- a/respo/zipkin.properties
+++ b/respo/zipkin.properties
@@ -1,1 +1,11 @@
-545454
+spring.datasource.url=jdbc:mysql://localhost:3306/zipkin?characterEncoding=utf8&useSSL=false
+spring.datasource.schema=classpath:mysql.sql
+spring.sleuth.enabled=false
+spring.zipkin.locator.discovery.enabled=true
+zipkin.collector.rabbitmq.address=localhost:5672
+zipkin.collector.rabbitmq.username=guest
+zipkin.collector.rabbitmq.password=guest
+zipkin.collector.rabbitmq.queue=zipkin
+zipkin.storage.type=mysql
+
+
