--- a/respo/zipkin.properties
+++ b/respo/zipkin.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=199412
 spring.datasource.url=jdbc:mysql://localhost:3306/zipkin?characterEncoding=utf8&useSSL=false
 spring.datasource.schema=classpath:mysql.sql
-spring.sleuth.enabled=false
+spring.sleuth.enabled=true
 spring.zipkin.locator.discovery.enabled=true
 zipkin.collector.rabbitmq.address=localhost:5672
 zipkin.collector.rabbitmq.username=guest
