--- a/respo/application.properties
+++ b/respo/application.properties
@@ -4,4 +4,4 @@ ribbon.ConnectTimeout=5000
 spring.rabbitmq.host=localhost
 spring.sleuth.sampler.percentage=1
 spring.sleuth.integration.enabled=false
-zipkin.rabbitmq.queue=zipkin
+spring.zipkin.rabbitmq.queue=zipkin
