--- a/respo/application.properties
+++ b/respo/application.properties
@@ -3,5 +3,5 @@ ribbon.ReadTimeout=5000
 ribbon.ConnectTimeout=5000
 spring.rabbitmq.host=localhost
 spring.sleuth.sampler.percentage=1
-spring.sleuth.integration.enabled=false
+spring.sleuth.integration.enabled=true
 spring.zipkin.rabbitmq.queue=zipkin
