--- a/respo/zipkin-service1.properties
+++ b/respo/zipkin-service1.properties
@@ -1,7 +1,4 @@
 server.port=9000
 spring.zipkin.locator.discovery.enabled=false
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.zipkin.base-url=http://localhost:
