--- a/respo/zipkin-service2.properties
+++ b/respo/zipkin-service2.properties
@@ -1,7 +1,5 @@
 server.port=9001
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 spring.zipkin.locator.discovery.enabled=false
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.zipkin.base-url=http://localhost:8020
+
