--- a/respo/application.properties
+++ b/respo/application.properties
@@ -1,6 +1,5 @@
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=10000
 ribbon.ReadTimeout=5000
 ribbon.ConnectTimeout=5000
-spring.rabbitmq.host=localhost
 spring.sleuth.sampler.percentage=1
-spring.sleuth.integration.enabled=true
+spring.sleuth.integration.enabled=false
