--- a/respo/zipkin.properties
+++ b/respo/zipkin.properties
@@ -3,5 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=199412
 spring.datasource.url=jdbc:mysql://localhost:3306/zipkin?characterEncoding=utf8&useSSL=false
 spring.datasource.schema=classpath:mysql.sql
-
-
+spring.sleuth.enabled=false
