--- a/respo/gateway.properties
+++ b/respo/gateway.properties
@@ -8,12 +8,17 @@ ribbon.MaxAutoRetriesNextServer=2
 ribbon.OkToRetryOnAllOperations=false
 
 zuul.ignoredServices='*'
-zuul.routes.auth-service.path=/uaa/**
-zuul.routes.auth-service.stripPrefix=false
-zuul.routes.auth-service.sensitiveHeaders=
+zuul.routes.uac-route.path=/uac/**
+zuul.routes.uac-route.stripPrefix=false
+zuul.routes.uac-routee.sensitiveHeaders=
 
-zuul.routes.a-service.path=/a/**
-zuul.routes.a-service.sensitiveHeaders=
+proxy.auth.routes.uac-route=oauth2
+proxy.auth.routes.mdc-route=oauth2
 
-zuul.routes.b-service.path=/b/**
-zuul.routes.b-service.sensitiveHeaders=
+security.oauth2.client.access-token-uri=http://localhost:7979/uaa/oauth/token
+security.oauth2.client.user-authorization-uri=http://localhost:7979/uaa/oauth/authorize
+security.oauth2.client.client-id=paascloud-client-gateway
+security.oauth2.client.client-secret=paascloudClientSecret
+security.oauth2.resource.user-info-uri=http://localhost:7979/uaa/user
+security.oauth2.resource.prefer-token-info=false
+#security.oauth2.resource.jwt.key-uri=http://paascloud-provider-uac:8000/oauth/token_key
