--- a/respo/gateway.properties
+++ b/respo/gateway.properties
@@ -12,7 +12,7 @@ zuul.routes.uac-route.stripPrefix=false
 zuul.routes.uac-routee.sensitiveHeaders=
 
 proxy.auth.routes.uac-route=oauth2
-proxy.auth.routes.mdc-route=oauth2
+#proxy.auth.routes.mdc-route=oauth2
 
 security.oauth2.client.access-token-uri=http://localhost:7979/uaa/oauth/token
 security.oauth2.client.user-authorization-uri=http://localhost:7979/uaa/oauth/authorize
