--- a/respo/gateway.properties
+++ b/respo/gateway.properties
@@ -9,7 +9,7 @@ ribbon.OkToRetryOnAllOperations=false
 zuul.ignoredServices='*'
 zuul.routes.uac-route.path=/uac/**
 zuul.routes.uac-route.stripPrefix=false
-zuul.routes.uac-routee.sensitiveHeaders=
+zuul.routes.uac-route.sensitiveHeaders=
 
 proxy.auth.routes.uac-route=oauth2
 #proxy.auth.routes.mdc-route=oauth2
