--- a/respo/product.properties
+++ b/respo/product.properties
@@ -1,1 +1,8 @@
 name=fan
+spring.datasource.username=root
+spring.datasource.password=199412
+spring.datasource.url=jdbc:mysql://localhost:3306/product
+spring.rabbitmq.host=localhost
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.zipkin.base-url=http://localhost:8081
