--- a/respo/product.properties
+++ b/respo/product.properties
@@ -5,3 +5,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.zipkin.base-url=http://localhost:8081
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.tcc.domain
