--- a/respo/product.properties
+++ b/respo/product.properties
@@ -7,3 +7,4 @@ spring.rabbitmq.password=guest
 spring.zipkin.base-url=http://localhost:8081
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.tcc.domain
+mybatis.type-handlers-package=com.tcc.domain
