--- a/respo/order.properties
+++ b/respo/order.properties
@@ -8,3 +8,7 @@ spring.zipkin.base-url=http://localhost:8081
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.tcc.domain
 mybatis.type-handlers-package=com.tcc.domain.handler
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.listener.template.retry.enabled=true
+spring.rabbitmq.template.mandatory=true
