--- a/respo/tcc.properties
+++ b/respo/tcc.properties
@@ -1,1 +1,8 @@
 spring.zipkin.base-url=http://localhost:8081
+spring.cloud.loadbalancer.retry.enabled=true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+ribbon.MaxAutoRetries=1
+ribbon.MaxAutoRetriesNextServer=3
+ribbon.OkToRetryOnAllOperations=true
+ribbon.ConnectTimeout=1500
+ribbon.ReadTimeout=2000
